// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbs> [SCREEN]: ABC should render crumbs "Home / Students / { student name }, / ABC" 1`] = `
<BreadCrumbs
  crumbKey="ABC"
  id="ID123456789"
  name="John"
>
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Breadcrumb
        label="breadcrumb"
        listProps={Object {}}
      >
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumb"
          >
            <Crumbs>
              <li
                className="breadcrumb-item"
                key="Home-0"
              >
                <Link
                  to="/"
                >
                  Home
                </Link>
              </li>
              <li
                className="breadcrumb-item"
                key="Students-1"
              >
                <Link
                  to="/students"
                >
                  Students
                </Link>
              </li>
              <li
                className="breadcrumb-item"
                key="John-2"
              >
                <Link
                  to="/student/ID123456789"
                >
                  John
                </Link>
              </li>
              <BreadcrumbItem
                active={true}
                key="ABC-3"
                linkProps={Object {}}
              >
                <li
                  aria-current="page"
                  className="breadcrumb-item active"
                >
                  ABC
                </li>
              </BreadcrumbItem>
            </Crumbs>
          </ol>
        </nav>
      </Breadcrumb>
    </div>
  </Row>
</BreadCrumbs>
`;

exports[`<BreadCrumbs> [SCREEN]: MyAccount should render crumbs "Home / My Account" 1`] = `
<BreadCrumbs
  crumbKey="myAccount"
>
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Breadcrumb
        label="breadcrumb"
        listProps={Object {}}
      >
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumb"
          >
            <Crumbs>
              <li
                className="breadcrumb-item"
                key="Home-0"
              >
                <Link
                  to="/"
                >
                  Home
                </Link>
              </li>
              <BreadcrumbItem
                active={true}
                key="My Account-1"
                linkProps={Object {}}
              >
                <li
                  aria-current="page"
                  className="breadcrumb-item active"
                >
                  My Account
                </li>
              </BreadcrumbItem>
            </Crumbs>
          </ol>
        </nav>
      </Breadcrumb>
    </div>
  </Row>
</BreadCrumbs>
`;

exports[`<BreadCrumbs> [SCREEN]: Student should render crumbs "Home / Students / { student name }" 1`] = `
<BreadCrumbs
  crumbKey="Student"
  name="John"
>
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Breadcrumb
        label="breadcrumb"
        listProps={Object {}}
      >
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumb"
          >
            <Crumbs>
              <li
                className="breadcrumb-item"
                key="Home-0"
              >
                <Link
                  to="/"
                >
                  Home
                </Link>
              </li>
              <li
                className="breadcrumb-item"
                key="Students-1"
              >
                <Link
                  to="/students"
                >
                  Students
                </Link>
              </li>
              <BreadcrumbItem
                active={true}
                key="John-2"
                linkProps={Object {}}
              >
                <li
                  aria-current="page"
                  className="breadcrumb-item active"
                >
                  John
                </li>
              </BreadcrumbItem>
            </Crumbs>
          </ol>
        </nav>
      </Breadcrumb>
    </div>
  </Row>
</BreadCrumbs>
`;

exports[`<BreadCrumbs> [SCREEN]: Students should render crumbs "Home / Students" 1`] = `
<BreadCrumbs
  crumbKey="Students"
>
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Breadcrumb
        label="breadcrumb"
        listProps={Object {}}
      >
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumb"
          >
            <Crumbs>
              <li
                className="breadcrumb-item"
                key="Home-0"
              >
                <Link
                  to="/"
                >
                  Home
                </Link>
              </li>
              <BreadcrumbItem
                active={true}
                key="Students-1"
                linkProps={Object {}}
              >
                <li
                  aria-current="page"
                  className="breadcrumb-item active"
                >
                  Students
                </li>
              </BreadcrumbItem>
            </Crumbs>
          </ol>
        </nav>
      </Breadcrumb>
    </div>
  </Row>
</BreadCrumbs>
`;
